AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/Do_we_have_purchase_contract__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_purchase_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wgraj umowę kupna do Files w sekcji Related</inlineHelpText>
    <label>Do we have purchase contract?</label>
    <type>Checkbox</type>
</CustomField>