AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <label>Floors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (no basement)</fullName>
            </value>
            <value>
                <fullName>2 (1 floor + basement)</fullName>
            </value>
            <value>
                <fullName>3 (2 floors + basement)</fullName>
            </value>
            <value>
                <fullName>4 (3 floors + basement)</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>