AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/m__c.field-meta.xml
<CustomField>
    <fullName>m__c</fullName>
    <label>m²</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>