AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/Minimal_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimal_Selling_Price__c</fullName>
    <formula>Purchase_Price__c * 1.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Purchase_Price__c * 1.15</inlineHelpText>
    <label>Minimal Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>