AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/Property_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Post_Code__c</fullName>
    <label>Property Post Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>