AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <label>Property Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>