AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art Déco</fullName>
            </value>
            <value>
                <fullName>Boho</fullName>
            </value>
            <value>
                <fullName>Eklektyczny</fullName>
            </value>
            <value>
                <fullName>Glamour</fullName>
            </value>
            <value>
                <fullName>Hampton</fullName>
            </value>
            <value>
                <fullName>Industrialny (loftowy)</fullName>
            </value>
            <value>
                <fullName>Klasyczny</fullName>
            </value>
            <value>
                <fullName>Nowoczesny</fullName>
            </value>
            <value>
                <fullName>Rustykalny</fullName>
            </value>
            <value>
                <fullName>Skandynawski</fullName>
            </value>
            <value>
                <fullName>Vintage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>