AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/recordTypes/House.recordType-meta.xml
<RecordType>
    <fullName>House</fullName>
    <active>true</active>
    <label>House</label>
</RecordType>