AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Product2/recordTypes/Office.recordType-meta.xml
<RecordType>
    <fullName>Office</fullName>
    <active>true</active>
    <label>Office</label>
</RecordType>